update error handling

--- a/client/index.html
+++ b/client/index.html
@@ -238,7 +238,7 @@
                 err
               </div>
               <div class="summary">
-                Feed looks <a>something</a> like <a>coworker</a> this.
+                Feed is down.
               </div>
             </div>
           </div>
