--- a/client/admin.html
+++ b/client/admin.html
@@ -35,9 +35,9 @@
         For faqs, a single object needs a question and an answer property.
         For example, five objects with the needed data would look like this, [{"question":"Are tutoring sessions virtual or in person?","answer":"Due to the ongoing COVID-19 pandemic, all tutoring sessions are currently being held virtually (via Zoom)."},{"question":"Are the tutoring sessions a one-time thing or recurring?","answer":"They can be either! When you sign up, you can select whether you want to sign up for one session, recurring sessions, or if you are unsure!"},{"question":"Are the tutors paid or volunteers?","answer":"All tutors are high school volunteers, but they all meet the rigorous standards Tremendous Tutors sets in terms of academics and teaching experience."},{"question":"I've signed up for tutoring! Now what?","answer":"Your tutor will reach out to you shortly via email to coordinate a time that works for both of you for your session(s)."},{"question":"What subjects can you tutor in?","answer":"On the sign-up form there is an extensive list of subjects available to choose from. If you need assistance in a subject not currently listed, you can manually input the subject into the 'other' section, and we will try our best to accommodate you."}]
       </p>
-      <h3>
-        When you click submit, nothing will happen on the admin page. However if the content did not update at all, you probably formatted wrong, or the server could be down. It's more likely you need to check your format though.
-      </h3>
+    </div>
+    <div id="error" style="display: none; color: red">
+      Error
     </div>
     <form>
       <label>Sessions</label><input type="text" id="sessions" name="sessions"> <br>
