--- a/client/admin.html
+++ b/client/admin.html
@@ -43,6 +43,7 @@
       <label>Sessions</label><input type="text" id="sessions" name="sessions"> <br>
       <label>Hours</label><input type="text" id="hours" name="hours"> <br>
       <label>Tutors</label><input type="text" id="tutors" name="tutors"> <br>
+      <label>Students</label><input type="text" id="students" name="students"> <br>
       <input type="button" id="stats-submit" value="Submit">
     </form>
     <form>
