--- a/client/index.html
+++ b/client/index.html
@@ -18,19 +18,15 @@
 
 <body>
   <div class="stickToTop">
-    <div class="vertical-center" style="height: 100px; color: #223d77">
-      <h1 style="font-size: 60px;">
-        Tremendous
-      </h1>
-    </div>
-    <div class="vertical-center" style="height: 100px; color: #223d77;">
-      <h1 style="font-size: 60px;">
-        Tutors
+    <div class="vertical-center" style="height: 100px; color: #223d77;border-bottom: 5px solid #003b87">
+      <h1 style="font-size: 40px;">
+        Tremendous Tutors
       </h1>
     </div>
   </div>
 
   <div class="ui main body">
+
     <div class="ui stackable grid" style="background-color: #6A8D92;">
 
       <div class="three wide stretched column leftSection" style="padding-right: 0px; padding-bottom: 0px;">
@@ -55,7 +51,7 @@
           <div class="home-img">
             <div class="ui grid">
               <div class="one wide stretched column"></div>
-              <div class="seven wide stretched column" style="padding:170px 0px 40px 10px">
+              <div class="seven wide stretched column">
                 <div class="ui raised segment home">
                   <h4 class="ui center aligned header">What is Tremendous Tutors?</h4>
                   <p style="text-align: center;">Tremendous Tutors, based in Westborough, MA, was created by high
@@ -71,7 +67,7 @@
                   </p>
                 </div>
               </div>
-              <div class="seven wide stretched column" style="padding:170px 10px 40px 0px">
+              <div class="seven wide stretched column">
                 <div class="ui raised segment home">
                   <h4 class="ui center aligned header">Mission Statement</h4>
                   <p style="text-align: center;">Tremendous Tutors is committed to providing free tutoring sessions to
@@ -152,6 +148,15 @@
                 Tutors
               </div>
             </div>
+            <div class="ui inverted statistic">
+              <div class="value" id="students">
+                err
+              </div>
+
+              <div class="label">
+                Students
+              </div>
+            </div>
           </div>
 
         </div>
@@ -166,10 +171,11 @@
             <div class="ui raised segment faq">
               <div class="ui medium header">Are tutoring sessions virtual or in person?</div>
               <p>
-                Due to the ongoing COVID-19 pandemic, all tutoring sessions are currently being held virtually (via Zoom).
+                Due to the ongoing COVID-19 pandemic, all tutoring sessions are currently being held virtually (via
+                Zoom).
               </p>
             </div>
-  
+
             <div class="ui raised segment faq">
               <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
               <p>
@@ -178,15 +184,16 @@
                 sessions, or if you are unsure!
               </p>
             </div>
-  
+
             <div class="ui raised segment faq">
               <div class="ui medium header">Are the tutors paid or volunteers?</div>
               <p>
-                All tutors are high school volunteers, but they all meet the rigorous standards Tremendous Tutors sets in
+                All tutors are high school volunteers, but they all meet the rigorous standards Tremendous Tutors sets
+                in
                 terms of academics and teaching experience.
               </p>
             </div>
-  
+
             <div class="ui raised segment faq">
               <div class="ui medium header">I've signed up for tutoring! Now what?</div>
               <p>
@@ -195,7 +202,7 @@
                 session(s).
               </p>
             </div>
-  
+
             <div class="ui raised segment faq">
               <div class="ui medium header">What subjects can you tutor in?</div>
               <p>
@@ -224,35 +231,31 @@
 
       </div>
 
-      <div class="three wide stretched column"
-        style="margin-top: 1rem; background-color: #6A8D92; padding-top: 0px; padding-bottom: 0px;">
-
-        <div class="ui feed" id="feed" style="background-color: #6A8D92;">
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                err
+      <div class="three wide stretched column" style="margin-top: 1rem; background-color: #6A8D92;">
+        <div style="height: 783.33px; overflow: auto;">
+          <div class="ui feed" id="feed" style="background-color: #6A8D92;">
+            <div class="event">
+              <div class="label">
+                <img src="/client/img/faqbackground.jpg">
               </div>
-              <div class="summary">
-                Feed is down.
+              <div class="content">
+                <div class="date">
+                  err
+                </div>
+                <div class="summary">
+                  Feed is down.
+                </div>
               </div>
             </div>
           </div>
-          
         </div>
-
       </div>
-
     </div>
 
     <div class="ui center aligned inverted basic segment footer" style="margin-bottom: 0px;">
       <p>Email: tremendoustutors1@gmail.com</p>
       <p>Phone Number: 508-988-0528</p>
-      <p>Copyright © 2021 Tremendous Tutors</p>
+      <p>Tremendous Tutors Copyright © 2021</p>
     </div>
 
     <div class="ui inverted basic segment footer" style="background-color: #493548; margin-top:0px">
