--- a/client/index.html
+++ b/client/index.html
@@ -130,16 +130,6 @@
               </div>
             </div>
             <div class="ui inverted statistic">
-              <div class="value" id="hours">
-                err
-              </div>
-
-              <div class="label">
-                Hours
-              </div>
-
-            </div>
-            <div class="ui inverted statistic">
               <div class="value" id="tutors">
                 err
               </div>
@@ -164,7 +154,7 @@
         <div class="content faq hide">
 
           <div class="faq-img" style="height: 480px;">
-            <h1 class="ui header" style="text-align: center; font-size: 40px;">FAQs</h1>
+            <h1 class="ui header" style="text-align: center; font-size: 60px;">FAQs</h1>
           </div>
 
           <div id="faqs">
@@ -220,7 +210,7 @@
         <div class="content meet hide">
 
           <div class="meet-img" style="height: 480px">
-            <h1 class="ui header" style="text-align: center; font-size: 40px">Meet the Tutors</h1>
+            <h1 class="ui header" style="text-align: center; font-size: 60px">Meet the Tutors</h1>
           </div>
 
           <div class="ui three stackable cards" id="tutorCards">
@@ -231,12 +221,12 @@
 
       </div>
 
-      <div class="three wide stretched column" style="margin-top: 1rem; background-color: #6A8D92;">
+      <div class="three wide stretched column" style="margin-top: 1rem; background-color: #F7D08A;">
         <div style="height: 783.33px; overflow: auto;">
-          <div class="ui feed" id="feed" style="background-color: #6A8D92;">
+          <div class="ui feed" id="feed" style="background-color: #F7D08A;">
             <div class="event">
               <div class="label">
-                <img src="/client/img/faqbackground.jpg">
+                <img src="/client/img/fillerimg.jpg">
               </div>
               <div class="content">
                 <div class="date">
@@ -255,7 +245,14 @@
     <div class="ui center aligned inverted basic segment footer" style="margin-bottom: 0px;">
       <p>Email: tremendoustutors1@gmail.com</p>
       <p>Phone Number: 508-988-0528</p>
-      <p>Tremendous Tutors Copyright © 2021</p>
+      <button onclick="window.open('https://www.youtube.com/watch?v=QtBDL8EiNZo', '_blank')" class="ui facebook button">
+        <i class="facebook icon"></i>
+        Facebook
+      </button>
+      <button onclick="window.open('https://www.instagram.com/tremendoustutors', '_blank')" class="ui instagram button">
+        <i class="instagram icon"></i>
+        Instagram
+      </button>
     </div>
 
     <div class="ui inverted basic segment footer" style="background-color: #493548; margin-top:0px">
