READY FOR DEPLOYMENT

--- a/client/index.html
+++ b/client/index.html
@@ -245,7 +245,7 @@
     <div class="ui center aligned inverted basic segment footer" style="margin-bottom: 0px;">
       <p>Email: tremendoustutors1@gmail.com</p>
       <p>Phone Number: 508-988-0528</p>
-      <button onclick="window.open('https://www.youtube.com/watch?v=QtBDL8EiNZo', '_blank')" class="ui facebook button">
+      <button onclick="window.open('https://www.facebook.com/tremendoustutors', '_blank')" class="ui facebook button">
         <i class="facebook icon"></i>
         Facebook
       </button>
