--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tremendous Tutors</title>
-  <link rel="icon" href="/client/img/favicon.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="/client/img/faviconT.jpg" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="/client/css/index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
